---------------------------------------------------------------------------------------------------
Version: 0.14.3
Date: ????
  Bugfixes:
    - Fix rotating loader entities
---------------------------------------------------------------------------------------------------
Version: 0.14.2
Date: 2022-11-13
  Bugfixes:
    - Fix cursor jumping when editing some text-fields
---------------------------------------------------------------------------------------------------
Version: 0.14.1
Date: 2022-11-13
  Bugfixes:
    - Fixed using instant upgrade planner on an entity with stage changes.
  Changes:
    - Poles will now respect connections in the current stage first, before connections to future stages.
---------------------------------------------------------------------------------------------------
Version: 0.14.0
Date: 2022-11-13
  Changes:
    - Rolling stock entities now have previews on all stages (that is not the first).
  Bugfixes:
    - Fix crash on loading a user scenario.
---------------------------------------------------------------------------------------------------
Version: 0.13.1
Date: 2022-11-12
  Bugfixes:
    - Fixed crash on empty blueprint filters (no set filters now means no filtering, even in whitelist mode).
---------------------------------------------------------------------------------------------------
Version: 0.13.0
Date: 2022-11-12
  Features:
    - Added feature to export blueprint book to a file (in script-output).
    - Added feature to enable/disable all entities in a stage.
  Bugfixes:
    - Fixed tiles in blueprints being offset when grid position is set.
    - Fixed auto-landfill option not doing anything
  GUI:
    - Reorganized staged build settings gui.
---------------------------------------------------------------------------------------------------
Version: 0.12.0
Date: 2022-11-09
  Features:
    - Added option to replace infinity chests/pipes with constant combinators in blueprints.
  Changes:
    - Updated locale.